# CSD2c_2021

./: .gitignore  README.md
JUCE/ProcessingAudioInputTutorial/: ProcessingAudioInputTutorial.jucer
JUCE/ProcessingAudioInputTutorial/Builds/LinuxMakefile/: Makefile
JUCE/ProcessingAudioInputTutorial/Builds/MacOSX/ProcessingAudioInputTutorial.xcodeproj/: project.pbxproj
JUCE/ProcessingAudioInputTutorial/Builds/VisualStudio2019/: ProcessingAudioInputTutorial.sln  ProcessingAudioInputTutorial_App.vcxproj  ProcessingAudioInputTutorial_App.vcxproj.filters  resources.rc
JUCE/ProcessingAudioInputTutorial/Builds/VisualStudio2019/x64/Debug/App/: ProcessingAudioInputTutorial.exe.recipe  ProcessingAudioInputTutorial_App.vcxproj.FileListAbsolute.txt  resources.res
JUCE/ProcessingAudioInputTutorial/Builds/VisualStudio2019/x64/Debug/App/Processi.440933A2.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  ProcessingAudioInputTutorial_App.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog  rc.command.1.tlog  rc.read.1.tlog  rc.write.1.tlog
JUCE/ProcessingAudioInputTutorial/JuceLibraryCode/: JuceHeader.h
JUCE/ProcessingAudioInputTutorial/Source/: Main.cpp  ProcessingAudioInputTutorial.h
JUCE/simple_delay/: simple_delay.jucer
JUCE/simple_delay/Builds/CLion/: CMakeLists.txt
JUCE/simple_delay/Builds/LinuxMakefile/: Makefile
JUCE/simple_delay/Builds/VisualStudio2019/: resources.rc  simple_delay.sln  simple_delay_App.vcxproj  simple_delay_App.vcxproj.filters
JUCE/simple_delay/JuceLibraryCode/: JuceHeader.h
JUCE/simple_delay/Source/: Main.cpp
Tracolor/: CMakeLists.txt  README.md  colorDetection.h  main.cpp
Tracolor/pitch_shifter/: circBuffer.h  main.cpp
Tracolor/reverse_delay/: delay.cpp
Tracolor/src/: CMakeLists.txt  colorDetection.h  main.cpp
Tracolor/src/pitch_shifter/: main.cpp  oscillator.cpp  pitcher.h  saw.cpp
Tracolor/src/port_audio/: audioModuleAdapter.cpp  audioModuleAdapter.h  port_audio.h
Tracolor/src/reverse_delay/: CMakeLists.txt  delay.cpp  delay.h  delayLine.cpp  delayLine.h  jackModuleAdapter.h  main.cpp  port_audio.h  reverse.cpp  reverse.h  sources.md
Tracolor/src/reverse_delay/reverse_delay/: CMakeLists.txt  delay.cpp  delay.h  delayLine.cpp  delayLine.h  main.cpp  portAudio.h  sources.md
colorTracking/: CMakeLists.txt  colorTracking.cpp  pitcher.h  saw.cpp  test.cpp
colorTracking/delay_circ_buffer/: CMakeLists.txt  delay.h  delayLine.cpp  port_audio.h  reverse.cpp
colorTrackingPitch/: CMakeLists.txt  colorTracking.cpp  main.cpp  oscillator.cpp  saw.h
delay_circ_buffer/: Makefile  delay.cpp  delay.h  main.cpp  reverse.h
doc/: DEMO.md  README.md
motionDetectionTracking/MotionDetectionTracking/: MotionDetectionTracking.vcxproj  MotionDetectionTracking.vcxproj.filters  backgroundSub.cpp  frameToFrame.cpp  main.cpp
motionDetectionTracking/MotionDetectionTracking/Debug/: vc141.idb
motionDetectionTracking/MotionDetectionTracking/Debug/MotionDe.B711211B.tlog/: CL.command.1.tlog  CL.read.1.tlog
motionDetectionTracking/MotionDetectionTracking/x64/Debug/: vc141.idb
motionDetectionTracking/MotionDetectionTracking/x64/Debug/MotionDe.B711211B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  MotionDetectionTracking.lastbuildstate  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
motionDetectionTracking/x64/Debug/: MotionDetectionTracking.ilk
not_finished_code/motionDetectionTracking/: MotionDetectionTracking.sln
not_finished_code/motionDetectionTracking/MotionDetectionTracking/: backgroundSub.cpp
not_finished_code/motionDetectionTracking/MotionDetectionTracking/Debug/MotionDe.B711211B.tlog/: CL.write.1.tlog  MotionDetectionTracking.lastbuildstate
not_finished_code/motionDetectionTracking/MotionDetectionTracking/x64/Debug/: vc141.idb
not_finished_code/motionDetectionTracking/MotionDetectionTracking/x64/Debug/MotionDe.B711211B.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog
not_finished_code/motionDetectionTracking/x64/Debug/: MotionDetectionTracking.ilk
pitchshift/: CMakeLists.txt  oscillator.cpp  port_audio.h  saw.cpp
pitchshift/__MACOSX/: ._CMakeLists.txt
portaudio/: CMakeLists.txt  circBuffer.cpp  circBuffer.h  main.cpp  oscillator.cpp  oscillator.h  saw.cpp  saw.h
portaudio/__MACOSX/: ._main.cpp  ._port_audio.h
reverse_delay/: CMakeLists.txt  delay.cpp
src/delay_circ_buffer/: Makefile  delay.cpp  delay.h  delay2.cpp  delay2.h  delayLine.cpp  delayLine.h  example  log.cpp  main.cpp  reverse.cpp  reverse.h  tracolor
